Update README.md
Added MAVEN_OPTS example to increase MaxPermSize.